--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^4.0.0",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "sequelize": "^4.4.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^2.8.0"
   }
 }
