--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "morgan": "^1.8.2",
     "pg": "^7.1.0",
     "sequelize": "^4.4.2"
   },
