--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "chai": "^4.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "mocha": "^3.5.0",
     "morgan": "^1.8.2",
     "pg": "^7.1.0",
     "sequelize": "^4.4.2"
