--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.15.4",
     "morgan": "^1.8.2",
     "pg": "^7.1.0",
-    "sequelize": "^4.4.2"
+    "sequelize": "^4.4.2",
+    "prom-client": "^10.0.3"
   },
   "devDependencies": {
     "chai": "^4.1.1",
