--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,16 @@ services:
       - db
   db:
     image: "postgres"
-    ports:
-      - "5432:5432"
     environment:
       - POSTGRES_DB=concept_development
       - POSTGRES_PASSWORD=postgres
+  prometheus:
+    image: "prom/prometheus"
+    volumes:
+      - ./monitoring/:/etc/prometheus/
+    command:
+      - '-config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - "9090:9090"
+    depends_on:
+      - web
